# GraphicLLM

./: .gitignore  AGENTS.md  DEVICE_REMOVAL_FIX.md  FLICKERING_FIX_SUMMARY.md  HOW_TO_BUILD_AND_DEBUG.md  README.md  TESTING_README.md  analyze-video-detailed.ps1  automate-test.ps1  build_fix.bat  build_now.bat  compare-recordings.ps1  debug_menu_state.json  find-flickering-issue.ps1  find-window.ps1  findingplan.Md  fix_postprocess.cpp  force-rebuild-release.ps1  force-rebuild.bat  head_Engine_h.cpp  nextphase.md  phase2.Md  phase3.md  ps-history-all.txt  ps-history.txt  rebuild-debug.bat  rebuild-release.bat  run-all-tests.bat  run_build.bat  test-config-extended.json  test-config-flickering.json  test-config-quick.json  test-config.json  test-fix-no-hzb-recording.ps1  test-fix-recording.ps1  test-fix-title-recording.ps1  test-fix-window-recording.ps1  test-no-hzb.ps1  test-recording.bat  test-with-logs.ps1  (+1 more)
CortexEngine/: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  DEFERRED_LIGHTING_IMPLEMENTATION.md  FEATURE_ENHANCEMENTS.md  LLM_ENHANCEMENTS.md  MATERIAL_SYSTEM.md  PHASE1_COMPLETE.md  PHASE2_ARCHITECTURE.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  RELEASE_READINESS.md  SCRIPTS.md  build.bat  build.ps1  convert_and_clean.py  convert_exr.py  fix_name.py  force_opset.py  full-build.ps1  install-all.ps1  rebuild.ps1  repair_and_convert.py  run-built.ps1  run.bat  run.ps1  setup.bat  setup.ps1  smart_convert.py  swap.ps1  transplant_metadata.py  vcpkg.json
CortexEngine/assets/: MR_INT-001_NaturalStudio_NAD.dds
CortexEngine/assets/config/: advanced_graphics_catalog.json  asset_led_world_palettes.json  biomes.json  editor_defaults.json  graphics_presets.json  input_defaults.json  release_package_manifest.json  render_quality.json  renderer_ownership_targets.json  showcase_scenes.json  terrain_presets.json  visual_baselines.json
CortexEngine/assets/environments/: environments.json
CortexEngine/assets/polyhaven/: rebar_reinforced_concrete_4k.blend
CortexEngine/assets/scripts/: example_entity.lua
CortexEngine/assets/shaders/: BRDFLUT.hlsl  Basic.hlsl  BiomeMaterials.hlsli  ClusteredLightCulling.hlsl  DebugBlitAlbedo.hlsl  DebugBlitDepth.hlsl  DebugBlitVisibility.hlsl  DecalPass.hlsl  DeferredLighting.hlsl  GPUCulling.hlsl  GrassBend.hlsli  MaterialResolve.hlsl  MotionVectors.hlsl  PBR_Lighting.hlsli  ParticleEmit.hlsl  ParticleEmitterLifecycle.hlsl  ParticleInstancePrepare.hlsl  ParticleRender.hlsl  ParticleSimulate.hlsl  ParticleSort.hlsl  Particles.hlsl  PostProcess.hlsl  ProceduralSky.hlsl  RTDenoise.hlsl  RTReflectionSignalStats.hlsl  RaytracedGI.dxil  RaytracedGI.hlsl  RaytracedReflections.dxil  RaytracedReflections.hlsl  RaytracedShadows.dxil  RaytracedShadows.hlsl  RaytracingMaterials.hlsli  RiverWater.hlsl  SSAO.hlsl  SSAO_Compute.hlsl  SSR.hlsl  Skinning.hlsl  SurfaceClassification.hlsli  TemporalRejectionMask.hlsl  Terrain.hlsl  (+11 more)
CortexEngine/docs/: LIQUID_GRAPHICS_COMPLETION_LEDGER.md  MATERIALS_GRAPHICS_ROBUSTNESS_LEDGER.md  NATURALISTIC_SHOWCASE_COMPLETION_LEDGER.md  REFACTOR_COMPLETION_LEDGER.md  RELEASE_CLEANUP_COMPLETION_LEDGER.md
CortexEngine/docs/media/: gallery_manifest.json  video_manifest.json
CortexEngine/src/: main.cpp
CortexEngine/src/AI/: AIPerception.cpp  AIPerception.h  BehaviorTree.cpp  BehaviorTree.h  NavMesh.cpp  NavMesh.h  Pathfinder.cpp  Pathfinder.h
CortexEngine/src/Animation/: AnimationClip.cpp  AnimationClip.h  AnimationStateMachine.cpp  AnimationStateMachine.h  Skeleton.cpp  Skeleton.h
CortexEngine/src/Audio/: AmbientZone.cpp  AmbientZone.h  AudioEngine.cpp  AudioEngine.h  SoundBuffer.cpp  SoundBuffer.h  SpatialAudio.cpp  SpatialAudio.h
CortexEngine/src/Core/: Engine.cpp  Engine.h  EngineEditorMode.cpp  EngineEditorMode.h  Engine_Camera.cpp  Engine_Input.cpp  Engine_LLM.cpp  Engine_PlayMode.cpp  Engine_Scenes.cpp  Engine_UI.cpp  PerfDiagnostics.cpp  PerfDiagnostics.h  ServiceLocator.cpp  ServiceLocator.h  StartupPreflight.cpp  StartupPreflight.h  VisualValidation.cpp  VisualValidation.h  Window.cpp  Window.h
CortexEngine/src/Debug/: CPUProfiler.h  DevConsole.h  GPUProfiler.cpp  GPUProfiler.h
CortexEngine/src/Editor/: ChunkGenerator.cpp  ChunkGenerator.h  EditorCamera.cpp  EditorCamera.h  EditorWorld.cpp  EditorWorld.h  PrefabSystem.h  SpatialGrid.cpp  SpatialGrid.h  TerrainBrush.cpp  TerrainBrush.h  UndoRedo.h  VegetationSpawner.cpp  VegetationSpawner.h
CortexEngine/src/Game/: InteractionSystem.cpp  InteractionSystem.h  SaveSystem.cpp  SaveSystem.h
CortexEngine/tests/: test_biome_encoding.cpp  test_phase1_engine_editor.cpp  test_phase2_engine_editor_mode.cpp
CortexEngine/tools/: README.md  fetch_naturalistic_assets.ps1  prepare_ibl_runtime_assets.ps1  run_advanced_graphics_catalog_tests.ps1  run_asset_kit_policy_tests.ps1  run_asset_led_scene_contract_tests.ps1  run_budget_profile_matrix.ps1  run_build_entrypoint_contract_tests.ps1  run_camera_motion_stability_smoke.ps1  run_conductor_energy_contract_tests.ps1  run_create_release_package.ps1  run_debug_primitive_contract_tests.ps1  run_depth_stability_contract_tests.ps1  run_descriptor_memory_stress_scene.ps1  run_dreamer_positive_runtime_tests.ps1  run_editor_frame_contract_tests.ps1  run_effects_gallery_tests.ps1  run_effects_showcase_smoke.ps1  run_environment_manifest_tests.ps1  run_fatal_error_contract_tests.ps1  run_glass_water_courtyard_smoke.ps1  run_gpu_particle_contract_tests.ps1  run_graphics_environment_budget_ui_smoke.ps1  run_graphics_material_controls_smoke.ps1  run_graphics_native_widget_smoke.ps1  run_graphics_preset_tests.ps1  run_graphics_settings_persistence_tests.ps1  run_graphics_ui_contract_tests.ps1  run_graphics_ui_interaction_smoke.ps1  run_hud_mode_contract_tests.ps1  run_ibl_asset_policy_tests.ps1  run_ibl_gallery_tests.ps1  run_launcher_native_widget_smoke.ps1  run_lighting_energy_budget_tests.ps1  run_liquid_gallery_smoke.ps1  run_liquid_graphics_contract_tests.ps1  run_llm_renderer_command_smoke.ps1  run_material_editor_contract_tests.ps1  run_material_editor_native_widget_smoke.ps1  run_material_lab_smoke.ps1  (+45 more)
(+480 files in other folders)
